--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,7 @@
 /* Always set the map height explicitly to define the size of the div
        * element that contains the map. */
       #map {
-        width: 80%;
-        margin: auto;
+        height: 100%;
       }
       /* Optional: Makes the sample page fill the window. */
       html, body {
