--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,11 @@
 /* Always set the map height explicitly to define the size of the div
        * element that contains the map. */
-      #map {
+      body {
+        width: 100%;
         height: 100%;
+      }
+
+      #map {
+        height: 80%;
+        width: 80%;
       }
