--- a/styles.css
+++ b/styles.css
@@ -11,8 +11,13 @@
         font-size: 40px;
       }
 
+      .bold {
+        font-style: bold;
+      }
+
       #map {
         height: 80%;
         width: 80%;
         min-height: 750px;
+        margin: auto;
       }
