--- a/styles.css
+++ b/styles.css
@@ -4,15 +4,18 @@
         width: 100%;
         height: 100%;
         text-align: center;
+        background-color: #2b2d38;
       }
 
       h1 {
+        color: white;
         font-family: courier;
         font-size: 40px;
       }
 
       .bold {
-        font-style: bold;
+        color: red;
+        font-weight: bold;
       }
 
       #map {
@@ -20,4 +23,8 @@
         width: 80%;
         min-height: 750px;
         margin: auto;
+        padding: 4px;
+        border-style: solid;
+        border-color: ghostwhite;
+        border-width: 4px
       }
