--- a/styles.css
+++ b/styles.css
@@ -26,5 +26,6 @@
         padding: 4px;
         border-style: solid;
         border-color: ghostwhite;
-        border-width: 4px
+        border-width: 4px;
+        border-radius: 4px;
       }
