--- a/styles.css
+++ b/styles.css
@@ -28,4 +28,5 @@
         border-color: ghostwhite;
         border-width: 4px;
         border-radius: 4px;
+        box-shadow: 0px 0px 20px 7px rgb(20,20,20);
       }
