--- a/styles.css
+++ b/styles.css
@@ -14,7 +14,8 @@
       }
 
       input {
-        width: 40%;
+        text-align: center;
+        width: 20%;
         font-size: 24px;
         border-radius: 4px;
         border-style: hidden;
