--- a/styles.css
+++ b/styles.css
@@ -28,6 +28,47 @@
         font-weight: bold;
       }
 
+      .menuButton {
+        color: white;
+        font-size: 20px;
+        position: fixed;
+        top: 8px;
+        left: 8px;
+      }
+
+      .sideMenu {
+        height: 100%; /* 100% Full-height */
+        width: 0; /* 0 width - change this with JavaScript */
+        position: fixed; /* Stay in place */
+        z-index: 1; /* Stay on top */
+        top: 0;
+        left: 0;
+        background-color: #111; /* Black*/
+        overflow-x: hidden;
+        padding-top: 60px;
+      }
+
+      .sideMenu .closebtn {
+        position: absolute;
+        top: 0;
+        right: 25px;
+        font-size: 36px;
+        margin-left: 50px;
+      }
+
+      .sideMenu a {
+        padding: 8px 8px 8px 32px;
+        text-decoration: none;
+        font-size: 25px;
+        color: #818181;
+        display: block;
+        transition: 0.3s
+      }
+
+      .sidenav a:hover, .offcanvas a:focus{
+        color: #f1f1f1;
+      }
+
       #map {
         height: 80%;
         width: 80%;
