--- a/styles.css
+++ b/styles.css
@@ -34,6 +34,11 @@
         position: fixed;
         top: 8px;
         left: 8px;
+        font-family: courier;
+      }
+
+      .menuButton:focus {
+        font-weight: bold;
       }
 
       .sideMenu {
