--- a/styles.css
+++ b/styles.css
@@ -37,7 +37,7 @@
         font-family: courier;
       }
 
-      .menuButton:focus {
+      .menuButton:hover {
         font-weight: bold;
       }
 
