--- a/styles.css
+++ b/styles.css
@@ -52,6 +52,7 @@
         background-color: #111; /* Black*/
         overflow-x: hidden;
         padding-top: 60px;
+        text-align: left;
       }
 
       .sideMenu .closebtn {
@@ -62,7 +63,7 @@
         margin-left: 50px;
       }
 
-      .sideMenu a {
+      .sideMenu span {
         padding: 8px 8px 8px 32px;
         text-decoration: none;
         font-size: 25px;
