About format script

--- a/styles.css
+++ b/styles.css
@@ -69,11 +69,12 @@
         font-size: 25px;
         color: #818181;
         display: block;
-        transition: 0.3s
+        transition: 0.3s;
       }
 
       .sideMenu span:hover, .offcanvas span:focus{
         color: #f1f1f1;
+        cursor: default;
       }
 
       #map {
